Add POST reports/photo_upload testing
Also changed its return type from plain text to json with one field. Other small refactors.
